--- a/pipeline.cabal
+++ b/pipeline.cabal
@@ -19,7 +19,7 @@ library
   hs-source-dirs:      src
   default-language:    Haskell2010
 
-executable readelf-example
+executable example1
   default-language:    Haskell2010
   main-is:             example1.hs
   hs-source-dirs:      examples,src
