--- a/pipeline.cabal
+++ b/pipeline.cabal
@@ -23,4 +23,5 @@ executable example1
   default-language:    Haskell2010
   main-is:             example1.hs
   hs-source-dirs:      examples,src
-  build-depends:       base >=4.8
+  build-depends:       base >=4.8, mtl
+  ghc-options:         -prof -fprof-auto
