--- a/pipeline.cabal
+++ b/pipeline.cabal
@@ -16,10 +16,11 @@ library
                        Hardware.PipelineDSL.Verilog,
                        Hardware.PipelineDSL.HW,
                        Hardware.PipelineDSL.Pipeline,
-                       Hardware.PipelineDSL.Module
+                       Hardware.PipelineDSL.Module,
+                       Hardware.PipelineDSL.FSM
   -- other-modules:       
   -- other-extensions:    
-  build-depends:       base >=4.7 && <4.10, mtl
+  build-depends:       base >=4.7 && <4.10, transformers
   hs-source-dirs:      src
   default-language:    Haskell2010
 
@@ -27,10 +28,16 @@ executable example1
   default-language:    Haskell2010
   main-is:             example1.hs
   hs-source-dirs:      examples,src
-  build-depends:       base >=4.7, mtl
+  build-depends:       base >=4.7, transformers
+
+executable fsm1
+  default-language:    Haskell2010
+  main-is:             fsm1.hs
+  hs-source-dirs:      examples,src
+  build-depends:       base >=4.7, transformers
 
 executable module_example
   default-language:    Haskell2010
   main-is:             module_example.hs
   hs-source-dirs:      examples,src
-  build-depends:       base >=4.7, mtl
+  build-depends:       base >=4.7, transformers
