--- a/pipeline.cabal
+++ b/pipeline.cabal
@@ -20,7 +20,7 @@ library
                        Hardware.PipelineDSL.FSM
   -- other-modules:       
   -- other-extensions:    
-  build-depends:       base >=4.7 && <4.10, transformers
+  build-depends:       base >=4.6 && <4.10, transformers
   hs-source-dirs:      src
   default-language:    Haskell2010
 
@@ -28,16 +28,22 @@ executable example1
   default-language:    Haskell2010
   main-is:             example1.hs
   hs-source-dirs:      examples,src
-  build-depends:       base >=4.7, transformers
+  build-depends:       base >=4.6, transformers
 
 executable fsm1
   default-language:    Haskell2010
   main-is:             fsm1.hs
   hs-source-dirs:      examples,src
-  build-depends:       base >=4.7, transformers
+  build-depends:       base >=4.6, transformers
 
 executable module_example
   default-language:    Haskell2010
   main-is:             module_example.hs
   hs-source-dirs:      examples,src
-  build-depends:       base >=4.7, transformers
+  build-depends:       base >=4.6, transformers
+
+executable uart_demo
+  default-language:    Haskell2010
+  main-is:             uart_demo.hs
+  hs-source-dirs:      examples,src
+  build-depends:       base >=4.6, transformers
