--- a/pipeline.cabal
+++ b/pipeline.cabal
@@ -20,7 +20,7 @@ library
                        Hardware.PipelineDSL.FSM
   -- other-modules:       
   -- other-extensions:    
-  build-depends:       base >=4.6 && <4.10, transformers
+  build-depends:       base >=4.6, transformers
   hs-source-dirs:      src
   default-language:    Haskell2010
 
